--- a/src/main/resources/templates/garden.html
+++ b/src/main/resources/templates/garden.html
@@ -83,8 +83,8 @@
                             </div>
                         </div>
 
-                        <div th:if="${garden.squareList.size() > 0} ">
-                            <div th:each="square: ${garden.squareList}">
+                        <div th:if="${squareList.size() > 0} ">
+                            <div th:each="square: ${squareList}">
                                 <div class="flex justify-between items-center p-2">
                                     <p class="text-gray-500 text-md tracking-tight"
                                        th:text="'Square Surface : ' + ${square.squareSurface} + ' cm²'"></p>
@@ -129,8 +129,8 @@
                                                 </button>
                                             </div>
                                         </div>
-                                        <div th:if="${square.plantingList.size() > 0} ">
-                                            <div th:each="planting: ${square.plantingList}">
+                                        <div th:if="${plantingListMap.get(square)}">
+                                            <div th:each="planting: ${plantingListMap.get(square)}">
                                                 <div class="flex justify-between items-center p-2">
 
                                                     <p class="text-gray-500 text-md tracking-tight"
