refactor: delete bidirectional relations

--- a/src/main/resources/templates/addSquare.html
+++ b/src/main/resources/templates/addSquare.html
@@ -61,7 +61,7 @@
                         <h2 class="text-2xl tracking-tight text-gray-500">New Square</h2>
                     </div>
                     <div class="px-2">
-                        <p class="text-lg tracking-tight text-gray-500" th:text="'Garden Remaining Surface : ' + ${garden.gardenRemainingSurface} + ' cm²'"></p>
+                        <p class="text-lg tracking-tight text-gray-500" th:text="'Garden Remaining Surface : ' + ${gardenRemainingSurface} + ' cm²'"></p>
                     </div>
                 </div>
                 <div class="px-4 py-1 divide-y divide-gray-300">
