--- a/src/main/resources/templates/addPlanting.html
+++ b/src/main/resources/templates/addPlanting.html
@@ -74,7 +74,7 @@
                         <h2 class="text-2xl tracking-tight text-gray-500">New Planting</h2>
                     </div>
                     <div class="px-2">
-                        <p class="text-lg tracking-tight text-gray-500" th:text="'Square Remaining Surface : ' + ${square.squareRemainingSurface} + ' cm²'"></p>
+                        <p class="text-lg tracking-tight text-gray-500" th:text="'Square Remaining Surface : ' + ${squareRemainingSurface} + ' cm²'"></p>
                     </div>
                 </div>
                 <div class="px-4 py-1 divide-y divide-gray-300">
