--- a/src/main/resources/templates/editSquare.html
+++ b/src/main/resources/templates/editSquare.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="px-2">
                         <p class="text-lg tracking-tight text-gray-500"
-                           th:text="'Garden Remaining Surface : ' + ${garden.gardenRemainingSurface} + ' cm²'"></p>
+                           th:text="'Garden Remaining Surface : ' + ${gardenRemainingSurface} + ' cm²'"></p>
                     </div>
                 </div>
                 <div class="px-4 py-1 divide-y divide-gray-300">
