--- a/src/main/resources/templates/gardens.html
+++ b/src/main/resources/templates/gardens.html
@@ -59,7 +59,7 @@
                     <div>
                         <form th:action="@{/garden}" method="get" class="flex justify-between items-center">
                             <div class="mx-2">
-                                <label class="mb-2 text-sm font-medium text-gray-500 inline-flex items-center cursor-pointer"
+                                <label class="text-sm font-medium text-gray-500 inline-flex items-center cursor-pointer"
                                        for="plant">
                                     <span class="mx-2">Plant</span>
                                 <select class="bg-gray-50 border border-gray-300 text-gray-500 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
@@ -71,10 +71,10 @@
                                 </select>
                                 </label>
                             </div>
-                            <div class="mx-2">
+                            <div class="mt-2 mx-2">
                                 <label for="emptySquare" class="inline-flex items-center cursor-pointer">
                                     <input id="emptySquare" name="emptySquare" type="checkbox" value="true" class="sr-only peer">
-                                    <div class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
+                                    <span class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></span>
                                     <span class="ms-3 text-sm font-medium text-gray-500 dark:text-gray-300">Empty Square ?</span>
                                 </label>
                             </div>
@@ -129,7 +129,7 @@
                                         </div>
                                     </div>
                                     <div class="px-4 py-1 divide-y divide-gray-300">
-                                        <div th:if="${!mapPlantingsBySquare.get(square)?.isEmpty()}">
+                                        <div th:if="${!mapPlantingsBySquare.get(square).isEmpty()}">
                                             <div class="flex items-center">
                                                 <div>
                                                     <h4 class="text-gray-500 text-bold text-lg tracking-tight">
